United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6875026 CTW failure jdk6_18/hotspot/src/share/vm/c1/c1_LinearScan.cpp:5486
6875026 : CTW failure jdk6_18/hotspot/src/share/vm/c1/c1_LinearScan.cpp:5486

Details
Type:
Bug
Submit Date:
2009-08-24
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
x86
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs16
Fixed Versions:
hs20

Related Reports
Backport:
Backport:

Sub Tasks

Description
The issue was found no the linux-i586 & solaris-i586. I did not try it on the windows.

Version:
java -version
Warning:  Cannot open log file: hotspot.log
Warning:  Forcing option -XX:LogFile=/tmp//hs_pid1691.log
java version "1.6.0_18-ea-fastdebug"
Java(TM) SE Runtime Environment (build 1.6.0_18-ea-fastdebug-b01)
Java HotSpot(TM) Server VM (build 16.0-b08-fastdebug, mixed mode)


Line to reproduce:
/net/vmsqe.russia/export/jdk/re/6u18/promoted/ea/b01/binaries/solaris-i586/fastdebug/bin/java -client  -XX:-ShowMessageBoxOnError -Xverify:all  -XX:+CompileTheWorld -XX:CompileTheWorldStartAt=152 -XX:CompileTheWorldStopAt=153 -Xbootclasspath/p:/net/vmsqe.russia/export/testbase/ctw/build/../jars/ibiblio/maven2/org/python/jython/2.2.1/jython-2.2.1.jar


Output:
VM option '-ShowMessageBoxOnError'
VM option '+CompileTheWorld'
VM option 'CompileTheWorldStartAt=152'
VM option 'CompileTheWorldStopAt=153'
Warning:  Cannot open log file: hotspot.log
Warning:  Forcing option -XX:LogFile=/tmp//hs_pid1689.log
CompileTheWorld : Compiling all classes in /net/vmsqe.russia/export/testbase/ctw/jars/ibiblio/maven2/org/python/jython/2.2.1/jython-2.2.1.jar

Preloading failed for (24) com/ziclix/python/sql/handler/InformixDataHandler
Preloading failed for (26) com/ziclix/python/sql/handler/OracleDataHandler
CompileTheWorld (152) : org/python/core/MergeState
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc:  SuppressErrorAt=/c1_LinearScan.cpp:5486
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/export0/BUILD_AREA/jdk6_18/hotspot/src/share/vm/c1/c1_LinearScan.cpp:5486), pid=1689, tid=7
#  Error: assert(false,"cannot spill interval that is used in first instruction (possible reason: no register found)")
#
# JRE version: 6.0_18-b01
# Java VM: Java HotSpot(TM) Client VM (16.0-b08-fastdebug mixed mode solaris-x86 )
# An error report file with more information is saved as:
# /tmp/hs_err_pid1689.log
#
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#
Current thread is 7
Dumping core ...
Abort

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/0cb042fd2d4b
                                     
2010-12-25
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/0cb042fd2d4b
                                     
2010-12-16
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/0cb042fd2d4b
                                     
2010-12-02
EVALUATION

6875026: CTW failure jdk6_18/hotspot/src/share/vm/c1/c1_LinearScan.cpp:5486
Reviewed-by: kvn, iveresov

Constructing the CodeEmitInfo for an instruciton may result in
evaluation of instructions which are only used in the ValueStack.
This should always been done before any argument setup with fixed
registers.  arraycopy uses all the registers and this can cause us to
fail our allocation.  The fix is to make the code look like the sparc
code and create the CodeEmitInfo early.  Tested with test from report.
                                     
2010-12-02
EVALUATION

I can reproduce this in the latest hotspot.
                                     
2010-11-30



Hardware and Software, Engineered to Work Together